tests/evaluator/should_fail/negative_buffer.csp
channel c, d : Bool

procTest1 = BUFFER(0, {(c.x, d.true) | x <- Bool})
